sumo/tests/sumo/spec/flow/errors/repetition_missing/rawdump.sumo.meso
<?xml version="1.0"?>

<!-- generated on 02/19/10 09:29:52 by SUMO sumo Version dev-SVN-r8292
<configuration>

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_routes.rou.xml,input_additional.add.xml"/>
    </input>

    <output>
        <netstate-dump value="rawdump.xml"/>
    </output>

    <time>
        <begin value="0"/>
        <end value="1"/>
    </time>

    <report>
        <no-duration-log value="true"/>
        <no-step-log value="true"/>
    </report>

    <mesoscopic>
        <mesosim value="true"/>
    </mesoscopic>

</configuration>
-->

<sumo-netstate>
</sumo-netstate>
